# Tech-Start-Django

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
product/: forms.py  models.py  views.py
product/migrations/: 0001_initial.py
tech_django/: asgi.py  settings.py  urls.py  wsgi.py
