[tool.poetry]
name = "tech-start-django"
version = "0.1.0"
description = ""
authors = ["Alessandro Jeferson Carvalho <alejefcarvalho@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.8.6"
pytest = "^6.2.4"
Django = "^3.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
